Fix text not centered on sign-in/-up buttons in sidebar

--- a/web/static/web/scss/_sidebar.scss
+++ b/web/static/web/scss/_sidebar.scss
@@ -19,8 +19,7 @@
                         display: block;
                         width: 100%;
                         margin-top: 5px;
-                        line-height: 2.5em;
-                        // line-height: 0.9rem;
+                        line-height: 2.95em;
                         font-size: 0.9rem;
                         border: 0px;
                         text-decoration: none;
